EasyCGRAParser.py
# Generated from EasyCGRAParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EasyCGRAParser ( Parser ):

    grammarFileName = "EasyCGRAParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'ADD'", "'ADDI'", "'SUB'", "'SUBI'", 
                     "'MUL'", "'DIV'", "'MAC'", "'INC'", "'LLS'", "'LRS'", 
                     "'OR'", "'AND'", "'XOR'", "'NOT'", "'FADD'", "'FSUB'", 
                     "'FMUL'", "'FDIV'", "'FMAC'", "'BEQ'", "'MOV'", "'MAC_CONST_ADD'", 
                     "'LOAD'", "'STORE'", "'Entry'", "'=>'", "'->'", "'\\n'", 
                     "'IMM'", "'MEM'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'null'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
                     "':'", "'!'", "'^'" ]

    symbolicNames = [ "<INVALID>", "ADD", "ADDI", "SUB", "SUBI", "MUL", 
                      "DIV", "MAC", "INC", "LLS", "LRS", "OR", "AND", "XOR", 
                      "NOT", "FADD", "FSUB", "FMUL", "FDIV", "FMAC", "BEQ", 
                      "MOV", "MAC_CONST_ADD", "LOAD", "STORE", "ENTRY", 
                      "ENTRY_ARROW", "RIGHT_ARROW", "N", "IMM", "MEM", "DECIMAL_LITERAL", 
                      "HEX_LITERAL", "OCT_LITERAL", "BINARY_LITERAL", "FLOAT_LITERAL", 
                      "HEX_FLOAT_LITERAL", "BOOL_LITERAL", "CHAR_LITERAL", 
                      "STRING_LITERAL", "TEXT_BLOCK", "NULL_LITERAL", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "SEMI", "COMMA", "DOT", "COLON", "AND_PRED", "OR_PRED", 
                      "WS", "COMMENT", "LINE_COMMENT", "IDENTIFIER" ]

    RULE_compilationUnit = 0
    RULE_entryBlock = 1
    RULE_entryHead = 2
    RULE_instList = 3
    RULE_inst = 4
    RULE_label = 5
    RULE_normalInst = 6
    RULE_operandList = 7
    RULE_operand = 8
    RULE_idList = 9
    RULE_predTag = 10
    RULE_opCode = 11

    ruleNames =  [ "compilationUnit", "entryBlock", "entryHead", "instList", 
                   "inst", "label", "normalInst", "operandList", "operand", 
                   "idList", "predTag", "opCode" ]

    EOF = Token.EOF
    ADD=1
    ADDI=2
    SUB=3
    SUBI=4
    MUL=5
    DIV=6
    MAC=7
    INC=8
    LLS=9
    LRS=10
    OR=11
    AND=12
    XOR=13
    NOT=14
    FADD=15
    FSUB=16
    FMUL=17
    FDIV=18
    FMAC=19
    BEQ=20
    MOV=21
    MAC_CONST_ADD=22
    LOAD=23
    STORE=24
    ENTRY=25
    ENTRY_ARROW=26
    RIGHT_ARROW=27
    N=28
    IMM=29
    MEM=30
    DECIMAL_LITERAL=31
    HEX_LITERAL=32
    OCT_LITERAL=33
    BINARY_LITERAL=34
    FLOAT_LITERAL=35
    HEX_FLOAT_LITERAL=36
    BOOL_LITERAL=37
    CHAR_LITERAL=38
    STRING_LITERAL=39
    TEXT_BLOCK=40
    NULL_LITERAL=41
    LPAREN=42
    RPAREN=43
    LBRACE=44
    RBRACE=45
    LBRACK=46
    RBRACK=47
    SEMI=48
    COMMA=49
    DOT=50
    COLON=51
    AND_PRED=52
    OR_PRED=53
    WS=54
    COMMENT=55
    LINE_COMMENT=56
    IDENTIFIER=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CompilationUnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(EasyCGRAParser.EOF, 0)

        def entryBlock(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyCGRAParser.EntryBlockContext)
            else:
                return self.getTypedRuleContext(EasyCGRAParser.EntryBlockContext,i)


        def getRuleIndex(self):
            return EasyCGRAParser.RULE_compilationUnit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompilationUnit" ):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompilationUnit" ):
                listener.exitCompilationUnit(self)




    def compilationUnit(self):

        localctx = EasyCGRAParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 24
                self.entryBlock()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 30
            self.match(EasyCGRAParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def entryHead(self):
            return self.getTypedRuleContext(EasyCGRAParser.EntryHeadContext,0)


        def LBRACE(self):
            return self.getToken(EasyCGRAParser.LBRACE, 0)

        def instList(self):
            return self.getTypedRuleContext(EasyCGRAParser.InstListContext,0)


        def RBRACE(self):
            return self.getToken(EasyCGRAParser.RBRACE, 0)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_entryBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntryBlock" ):
                listener.enterEntryBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntryBlock" ):
                listener.exitEntryBlock(self)




    def entryBlock(self):

        localctx = EasyCGRAParser.EntryBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_entryBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.entryHead()
            self.state = 33
            self.match(EasyCGRAParser.LBRACE)
            self.state = 34
            self.instList()
            self.state = 35
            self.match(EasyCGRAParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntryHeadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTRY(self):
            return self.getToken(EasyCGRAParser.ENTRY, 0)

        def ENTRY_ARROW(self):
            return self.getToken(EasyCGRAParser.ENTRY_ARROW, 0)

        def operandList(self):
            return self.getTypedRuleContext(EasyCGRAParser.OperandListContext,0)


        def getRuleIndex(self):
            return EasyCGRAParser.RULE_entryHead

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntryHead" ):
                listener.enterEntryHead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntryHead" ):
                listener.exitEntryHead(self)




    def entryHead(self):

        localctx = EasyCGRAParser.EntryHeadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_entryHead)
        try:
            self.state = 43
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 37
                self.match(EasyCGRAParser.ENTRY)
                self.state = 38
                self.match(EasyCGRAParser.ENTRY_ARROW)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.match(EasyCGRAParser.ENTRY)
                self.state = 40
                self.operandList()
                self.state = 41
                self.match(EasyCGRAParser.ENTRY_ARROW)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def inst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyCGRAParser.InstContext)
            else:
                return self.getTypedRuleContext(EasyCGRAParser.InstContext,i)


        def getRuleIndex(self):
            return EasyCGRAParser.RULE_instList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstList" ):
                listener.enterInstList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstList" ):
                listener.exitInstList(self)




    def instList(self):

        localctx = EasyCGRAParser.InstListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_instList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 157713949506142206) != 0):
                self.state = 45
                self.inst()
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(EasyCGRAParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(EasyCGRAParser.RBRACE, 0)

        def normalInst(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyCGRAParser.NormalInstContext)
            else:
                return self.getTypedRuleContext(EasyCGRAParser.NormalInstContext,i)


        def label(self):
            return self.getTypedRuleContext(EasyCGRAParser.LabelContext,0)


        def getRuleIndex(self):
            return EasyCGRAParser.RULE_inst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInst" ):
                listener.enterInst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInst" ):
                listener.exitInst(self)




    def inst(self):

        localctx = EasyCGRAParser.InstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_inst)
        self._la = 0 # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 51
                self.match(EasyCGRAParser.LBRACE)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 157696357320097790) != 0):
                    self.state = 52
                    self.normalInst()
                    self.state = 57
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 58
                self.match(EasyCGRAParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.normalInst()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.label()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(EasyCGRAParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(EasyCGRAParser.COLON, 0)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)




    def label(self):

        localctx = EasyCGRAParser.LabelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_label)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(EasyCGRAParser.IDENTIFIER)
            self.state = 64
            self.match(EasyCGRAParser.COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NormalInstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opCode(self):
            return self.getTypedRuleContext(EasyCGRAParser.OpCodeContext,0)


        def COMMA(self):
            return self.getToken(EasyCGRAParser.COMMA, 0)

        def operandList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyCGRAParser.OperandListContext)
            else:
                return self.getTypedRuleContext(EasyCGRAParser.OperandListContext,i)


        def RIGHT_ARROW(self):
            return self.getToken(EasyCGRAParser.RIGHT_ARROW, 0)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_normalInst

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNormalInst" ):
                listener.enterNormalInst(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNormalInst" ):
                listener.exitNormalInst(self)




    def normalInst(self):

        localctx = EasyCGRAParser.NormalInstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_normalInst)
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.opCode()
                self.state = 67
                self.match(EasyCGRAParser.COMMA)
                self.state = 68
                self.operandList()
                self.state = 69
                self.match(EasyCGRAParser.RIGHT_ARROW)
                self.state = 70
                self.operandList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 72
                self.operandList()
                self.state = 73
                self.match(EasyCGRAParser.RIGHT_ARROW)
                self.state = 74
                self.operandList()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 76
                self.opCode()
                self.state = 77
                self.match(EasyCGRAParser.COMMA)
                self.state = 78
                self.operandList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operand(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EasyCGRAParser.OperandContext)
            else:
                return self.getTypedRuleContext(EasyCGRAParser.OperandContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EasyCGRAParser.COMMA)
            else:
                return self.getToken(EasyCGRAParser.COMMA, i)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_operandList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperandList" ):
                listener.enterOperandList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperandList" ):
                listener.exitOperandList(self)




    def operandList(self):

        localctx = EasyCGRAParser.OperandListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_operandList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.operand()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==49:
                self.state = 83
                self.match(EasyCGRAParser.COMMA)
                self.state = 84
                self.operand()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperandContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def predTag(self):
            return self.getTypedRuleContext(EasyCGRAParser.PredTagContext,0)


        def LBRACK(self):
            return self.getToken(EasyCGRAParser.LBRACK, 0)

        def idList(self):
            return self.getTypedRuleContext(EasyCGRAParser.IdListContext,0)


        def RBRACK(self):
            return self.getToken(EasyCGRAParser.RBRACK, 0)

        def IMM(self):
            return self.getToken(EasyCGRAParser.IMM, 0)

        def DECIMAL_LITERAL(self):
            return self.getToken(EasyCGRAParser.DECIMAL_LITERAL, 0)

        def OCT_LITERAL(self):
            return self.getToken(EasyCGRAParser.OCT_LITERAL, 0)

        def HEX_LITERAL(self):
            return self.getToken(EasyCGRAParser.HEX_LITERAL, 0)

        def BINARY_LITERAL(self):
            return self.getToken(EasyCGRAParser.BINARY_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(EasyCGRAParser.FLOAT_LITERAL, 0)

        def MEM(self):
            return self.getToken(EasyCGRAParser.MEM, 0)

        def label(self):
            return self.getTypedRuleContext(EasyCGRAParser.LabelContext,0)


        def getRuleIndex(self):
            return EasyCGRAParser.RULE_operand

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperand" ):
                listener.enterOperand(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperand" ):
                listener.exitOperand(self)




    def operand(self):

        localctx = EasyCGRAParser.OperandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operand)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.predTag()
                self.state = 91
                self.match(EasyCGRAParser.LBRACK)
                self.state = 92
                self.idList()
                self.state = 93
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(EasyCGRAParser.IMM)
                self.state = 96
                self.match(EasyCGRAParser.LBRACK)
                self.state = 97
                self.match(EasyCGRAParser.DECIMAL_LITERAL)
                self.state = 98
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 99
                self.match(EasyCGRAParser.IMM)
                self.state = 100
                self.match(EasyCGRAParser.LBRACK)
                self.state = 101
                self.match(EasyCGRAParser.OCT_LITERAL)
                self.state = 102
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 103
                self.match(EasyCGRAParser.IMM)
                self.state = 104
                self.match(EasyCGRAParser.LBRACK)
                self.state = 105
                self.match(EasyCGRAParser.HEX_LITERAL)
                self.state = 106
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.match(EasyCGRAParser.IMM)
                self.state = 108
                self.match(EasyCGRAParser.LBRACK)
                self.state = 109
                self.match(EasyCGRAParser.BINARY_LITERAL)
                self.state = 110
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 111
                self.match(EasyCGRAParser.IMM)
                self.state = 112
                self.match(EasyCGRAParser.LBRACK)
                self.state = 113
                self.match(EasyCGRAParser.FLOAT_LITERAL)
                self.state = 114
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 115
                self.predTag()
                self.state = 116
                self.match(EasyCGRAParser.MEM)
                self.state = 117
                self.match(EasyCGRAParser.LBRACK)
                self.state = 118
                self.idList()
                self.state = 119
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 121
                self.predTag()
                self.state = 122
                self.match(EasyCGRAParser.MEM)
                self.state = 123
                self.match(EasyCGRAParser.LBRACK)
                self.state = 124
                self.match(EasyCGRAParser.HEX_LITERAL)
                self.state = 125
                self.match(EasyCGRAParser.RBRACK)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 127
                self.label()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(EasyCGRAParser.IDENTIFIER)
            else:
                return self.getToken(EasyCGRAParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(EasyCGRAParser.COMMA)
            else:
                return self.getToken(EasyCGRAParser.COMMA, i)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_idList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdList" ):
                listener.enterIdList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdList" ):
                listener.exitIdList(self)




    def idList(self):

        localctx = EasyCGRAParser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_idList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(EasyCGRAParser.IDENTIFIER)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==49:
                self.state = 131
                self.match(EasyCGRAParser.COMMA)
                self.state = 132
                self.match(EasyCGRAParser.IDENTIFIER)
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PredTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND_PRED(self):
            return self.getToken(EasyCGRAParser.AND_PRED, 0)

        def OR_PRED(self):
            return self.getToken(EasyCGRAParser.OR_PRED, 0)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_predTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPredTag" ):
                listener.enterPredTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPredTag" ):
                listener.exitPredTag(self)




    def predTag(self):

        localctx = EasyCGRAParser.PredTagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_predTag)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [52]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.match(EasyCGRAParser.AND_PRED)
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(EasyCGRAParser.OR_PRED)
                pass
            elif token in [30, 46]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpCodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(EasyCGRAParser.ADD, 0)

        def ADDI(self):
            return self.getToken(EasyCGRAParser.ADDI, 0)

        def SUB(self):
            return self.getToken(EasyCGRAParser.SUB, 0)

        def SUBI(self):
            return self.getToken(EasyCGRAParser.SUBI, 0)

        def MUL(self):
            return self.getToken(EasyCGRAParser.MUL, 0)

        def DIV(self):
            return self.getToken(EasyCGRAParser.DIV, 0)

        def MAC(self):
            return self.getToken(EasyCGRAParser.MAC, 0)

        def INC(self):
            return self.getToken(EasyCGRAParser.INC, 0)

        def LLS(self):
            return self.getToken(EasyCGRAParser.LLS, 0)

        def LRS(self):
            return self.getToken(EasyCGRAParser.LRS, 0)

        def OR(self):
            return self.getToken(EasyCGRAParser.OR, 0)

        def AND(self):
            return self.getToken(EasyCGRAParser.AND, 0)

        def XOR(self):
            return self.getToken(EasyCGRAParser.XOR, 0)

        def NOT(self):
            return self.getToken(EasyCGRAParser.NOT, 0)

        def FADD(self):
            return self.getToken(EasyCGRAParser.FADD, 0)

        def FSUB(self):
            return self.getToken(EasyCGRAParser.FSUB, 0)

        def FMUL(self):
            return self.getToken(EasyCGRAParser.FMUL, 0)

        def FDIV(self):
            return self.getToken(EasyCGRAParser.FDIV, 0)

        def FMAC(self):
            return self.getToken(EasyCGRAParser.FMAC, 0)

        def MOV(self):
            return self.getToken(EasyCGRAParser.MOV, 0)

        def MAC_CONST_ADD(self):
            return self.getToken(EasyCGRAParser.MAC_CONST_ADD, 0)

        def getRuleIndex(self):
            return EasyCGRAParser.RULE_opCode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpCode" ):
                listener.enterOpCode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpCode" ):
                listener.exitOpCode(self)




    def opCode(self):

        localctx = EasyCGRAParser.OpCodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_opCode)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7340030) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





